<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/back_profile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_back" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2.1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:text="@string/edit_note_edit"
                android:textColor="@color/textColorLight"
                android:textSize="16sp"
                android:textStyle="bold" />

        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edit_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_note_name"
            android:lines="1"
            android:textColor="@color/textColorLight"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_note_description"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="2"
        android:background="@drawable/background_item_note">

        <ScrollView
            android:id="@+id/text_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edit_description_note_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top|start"
                android:textColor="@color/textColorLight"
                android:inputType="textMultiLine"
                android:textAllCaps="false" />

        </ScrollView>

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deletePhotoEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_note_delete_photo"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/ic_clear"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/photoViewEdit"
                android:layout_width="31dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_note_add_photo"
                android:textColor="@color/ultramarin"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/star_ed"
                android:layout_width="31dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_star_in_add_notes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_note_importantly"
                android:textColor="@color/ultramarin"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deleteScheduleEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_note_delete_date"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/ic_clear"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/addScheduleEdit"
                android:layout_width="31dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_calendar" />

            <TextView
                android:id="@+id/text_date_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_note_add_date"
                android:textAlignment="center"
                android:textColor="@color/ultramarin"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_time_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/ultramarin"
                android:textSize="12sp"
                android:visibility="gone"
                tools:visibility="visible" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/edit_save_note_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/edit_note_save_edit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>
