<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="note"
            type="com.levkorol.todo.ui.note.fragments.AddNoteFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/back_profile"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/btn_back" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2.1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:text="@string/add_note"
                    android:textColor="@color/textColorLight"
                    android:textSize="16sp" />

            </FrameLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/add_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_note_hint_name_note"
                android:textAllCaps="false"
                android:textColor="@color/textColorLight"
                android:imeOptions="actionDone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_note_description_note"
                android:textSize="17sp"

                />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="5"
            android:background="@drawable/background_item_note">

            <ScrollView
                android:id="@+id/text_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/add_description_note_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top|start"
                    android:lines="19"
                    android:textColor="@color/textColorLight"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:textAllCaps="false"
                    />


            </ScrollView>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/addPhoto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/deletePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_note_delete_photo"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_clear"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/photoView"
                    android:layout_width="31dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_note_add_photo"
                    android:textColor="@color/ultramarin"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/star_image_btn"
                    android:layout_width="34dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star_in_add_notes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_note_importantly"
                    android:textColor="@color/ultramarin"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/addSchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/deleteSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_note_delete_date"
                    android:visibility="gone"
                    app:drawableStartCompat="@drawable/ic_clear"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/add_schedule"
                    android:layout_width="31dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_add_calendar" />


                <TextView
                    android:id="@+id/text_date_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_note_add_date"
                    android:textAlignment="center"
                    android:textColor="@color/ultramarin"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/ultramarin"
                    android:textSize="12sp"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/save_note_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_note_save"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

    </LinearLayout>

</layout>