<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.note.NoteFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/back_profile"
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/btn_back"
                    android:padding="8dp" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="9">

                <TextView
                    android:id="@+id/title_note_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Zametkafffffff" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageViewNotePhoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp"

               />


            <TextView
                android:id="@+id/description_note_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                tools:text="zametvdfvdfvdfvdfka
                fffffffzamcvdfvdfvdfetka  fffffzametka
                 zametvdfvdfvdfvzametvdfvdfvdfvdfka
                fffffffzamcvdfvdfvdfetka  fffffzametka fffffffffdfka
                fffffffzamcvdfvdfvdfetka  fffzametvdfvdfvdfvdfka
                fffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/lichtpinck"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/timer_pick_image"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_timer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/vipolnot"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                tools:text="14.00, 02.03.2020" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/edit_btn"
                    android:layout_width="31dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_update" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/edit_note"
                    android:textColor="@color/ultramarin"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="31dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star_in_add_notes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/star"
                    android:textColor="@color/ultramarin"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/share_btn"
                    android:layout_width="31dp"
                    android:layout_height="27dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/share"
                    android:textColor="@color/ultramarin"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/delete_btn"
                    android:layout_width="31dp"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/delete_note"
                    android:textColor="@color/ultramarin"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/palegray"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/opov"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Switch
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_margin="16dp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>